fix: add details gap

--- a/src/pages/Draw/blocks/content/CustomEdit/CustomNode.less
+++ b/src/pages/Draw/blocks/content/CustomEdit/CustomNode.less
@@ -13,3 +13,7 @@
     display: flex;
     // align-items: center;
 }
+
+.detail-item {
+    margin: 10px 0;
+}
